# GoBizz

./: .gitignore  LICENSE  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
auth-service/: .env.example  .env.sample  Dockerfile  Makefile  app.env.sample  go.mod  go.sum  railway.json
auth-service/cmd/: main.go
auth-service/middleware/: auth.go
auth-service/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_create_links.down.sql  003_events.down.sql  003_events.up.sql
auth-service/proto/: events.proto  links.proto  links_write.proto
front-end/: .env.sample  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/: .env.example  middleware.ts  package-lock.json  package.json  vercel.json
links-service/: .env.example  Dockerfile  Makefile  go.mod  go.sum  railway.json
links-service-read/: .env.example  Dockerfile  Makefile  go.mod  go.sum  railway.json  sqlc.yaml
links-service-write/: .env.example  Dockerfile  Makefile  go.mod  go.sum  railway.json
mobile/: pubspec.yaml
project/: .env  Makefile  docker-compose.yaml  gsis,json
recurring-service/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml  railway.json
recurring-service/proto/: events.proto
recurring-service/src/: main.rs
recurring-service/src/config/: mod.rs
recurring-service/src/db/: mod.rs
recurring-service/src/grpc/: mod.rs
recurring-service/src/models/: events.rs  mod.rs  occurrences.rs
recurring-service/src/repositories/: events_repository.rs  mod.rs
recurring-service/src/services/: events_service.rs  mod.rs
(+168 files in other folders)
