[package]
name = "recurring-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rayon = "1.10"
tokio = { version = "1.46.1", features = ["full"]}
tonic = { version = "0.14.1", features = ["transport"] }
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"]}
tower = { version = "0.5", features = ["limit"] }
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
tracing = "0.1"
dotenvy = "0.15"
serde_with = { version = "3", features = ["macros"] }
prost-types = "0.14.1"
tonic-prost = "0.14.1"          # <-- adicione isto
tonic-health = "0.14.1"

tower-http = { version = "0.6.6", features = ["cors", "trace", "compression-full", "timeout", "util"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio", "postgres", "uuid", "time", "macros", "migrate", "chrono"
] }

# UUID e datas
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
protoc-bin-vendored = "3"